--- a/.gitignore
+++ b/.gitignore
@@ -393,7 +393,7 @@ FodyWeavers.xsd
 # Local History for Visual Studio Code
 .history/
 **/Debug/*
-
+.AssemblyReference.Cache
 # Windows Installer files from build outputs
 *.cab
 *.msi
