--- a/.gitignore
+++ b/.gitignore
@@ -393,8 +393,8 @@ FodyWeavers.xsd
 # Local History for Visual Studio Code
 .history/
 **/Debug/*
-.AssemblyReference.Cache
-*.AssemblyReference.Cache
+.AssemblyReference.cache
+*.AssemblyReference.cache
 # Windows Installer files from build outputs
 *.cab
 *.msi
