--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
 
+CihazTakip.Persistence.csproj.AssemblyReference.cache
 
 /Debug
 
